--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 :root{
  --foreground: #151515;
- --background:  
+ --background: #A91D3A;
  --lighter: #C73659;
  --hover: #ed406a;
  --timerBackground: #EEEEEE;
